--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
-spring.datasource.max-active=10
+spring.datasource.max-active=100
 spring.datasource.max-idle=8
 spring.datasource.max-wait=10000
 spring.datasource.min-evictable-idle-time-millis=1000
@@ -21,3 +21,9 @@ datasource.flyway.url=jdbc:mysql://localhost:3306/demo
 datasource.flyway.username=root
 datasource.flyway.password=root
 datasource.flyway.driver-class-name=com.mysql.jdbc.Driver
+
+spring.mvc.view.prefix=/views/
+spring.mvc.view.suffix=.html
+
+#security.user.name=user
+#security.user.password=password
