--- a/build.gradle
+++ b/build.gradle
@@ -53,7 +53,8 @@ dependencies {
     compile("mysql:mysql-connector-java")
 	compile("org.flywaydb:flyway-core:4.0")
 		
-    compile("org.codehaus.groovy:groovy")
+    //compile("org.codehaus.groovy:groovy")
+	compile group: 'org.codehaus.groovy', name: 'groovy', version: '2.4.6'
     testCompile("org.springframework.boot:spring-boot-starter-test")
 	compile("com.bertramlabs.plugins:asset-pipeline-spring-boot:2.7.4")
 	compile("javax.inject:javax.inject:1")
@@ -64,7 +65,7 @@ dependencies {
 }
 
 task wrapper(type: Wrapper) {
-    gradleVersion = '2.3'
+    gradleVersion = '2.11'
 }
 
 clientDependencies {
